syntax = "proto3";
option go_package = "github.com/shishir9159/kapetanios/proto";

message PrerequisitesMinorUpgrade {
  bool etcdStatus = 1;
  uint64 storageAvailability = 2;
  string err = 3;
}

message CreateUpgradeResponse {
  bool proceedNextStep = 1;
  bool skipRetryCurrentStep = 2;
  bool terminateApplication = 3;
}

message AvailableVersions {
  repeated string version = 1;
  string err = 2;
}

message clusterUpgradeResponse {
  bool proceedNextStep = 1;
  bool skipRetryCurrentStep = 2;
  bool terminateApplication = 3;
  bool certificateRenewal = 4;
  string version = 5;
}

message UpgradeCompatibility {
  bool osCompatibility = 1;
  string diff = 2;
  string err = 3;
}

message kubeadmUpgrade {
  bool kubeadmUpgradeSuccess = 1;
  string log = 2;
  string err = 3;
}

message upgradePlan {
  bool kubeadmUpgradeSuccess = 1;
  string currentClusterVersion = 2;
  string log = 3;
  string err = 4;
}

message clusterUpgrade {
  bool prerequisiteCheckSuccess = 1;
  bool upgradeSuccess = 2;
  bool restartSuccess = 3;
  uint32 retryAttempt = 4;
  string log = 5;
  string err = 6;
}


service MinorUpgrade {
  rpc ClusterHealthChecking(PrerequisitesMinorUpgrade) returns (CreateUpgradeResponse);
  rpc UpgradeVersionSelection(AvailableVersions) returns (clusterUpgradeResponse);
  rpc UpgradeCompatibility(PrerequisitesMinorUpgrade) returns (CreateUpgradeResponse);
}